--- a/src/components/barra/barra.module.css
+++ b/src/components/barra/barra.module.css
@@ -1,22 +1,27 @@
 .barra {
   background-color: var(--background-600);
   transition: all 0.4s ease;
-  align-items: center;
+  align-items: flex-start;
   position: fixed;
   top: 0;
   left: 0;
   height: 100vh;
   width: 70px;
   padding: 10px;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .expandida {
   width: 180px;
+  transition: width 0.4s ease;
+
 }
 
 .barraMenu {
   background-color: var(--primary-700);
-  margin: 5px;
+  margin: 5px 0;
   transition: all 0.4s ease;
   color: var(--text-100);
   align-items: center;
@@ -26,4 +31,10 @@
   &:hover {
     background-color: var(--background-400);
   }
+}
+
+.barraFooter {
+  margin-top: auto;
+  width: 100%;
+  padding: 10px 0; 
 }
