--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -4,6 +4,8 @@
   display: grid;
   place-items: center;
   background-color: rgba(131, 131, 131, 0.356);
+  z-index: 11; 
+  backdrop-filter: blur(2px);
 }
 
 .modalHidden {
@@ -11,7 +13,6 @@
 }
 
 .modalContent {
-  z-index: 10;
   padding: 2%;
   display: flex;
   flex-direction: column;
