--- a/src/view/profile/profile.module.css
+++ b/src/view/profile/profile.module.css
@@ -1,17 +1,39 @@
-.profile {
- display: flex;
-
+.profileContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
 }
-.iconProfile {
-  border: 1px solid #000;
-  border-radius: 100%;
-  position: relative;
-  height: 400px;
-  width: 400px;
-  display: grid;
-  place-items: center;
 
-  svg {
-    margin-left: 25px;
-  }
+
+.profile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  width: 100%;
+  max-width: 900px;
+}
+
+.iconProfile {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  border: 2px solid var(--background-950);
+}
+
+.iconImagen {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.iconProfile svg {
+  width: 80%;
+  height: 80%;
+  object-fit: cover;
+  margin-left: 42px;
 }
