--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -1,10 +1,10 @@
 .modal {
-  position: absolute;
+  position: fixed;
   inset: 0;
   display: grid;
   place-items: center;
   background-color: rgba(131, 131, 131, 0.356);
-  z-index: 11; 
+  z-index: 11;
   backdrop-filter: blur(2px);
 }
 
@@ -17,8 +17,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: left;
   border-radius: 2%;
+  gap: 10px;
   width: 50%;
   max-height: 550px;
   background-color: var(--background-600);
@@ -27,19 +27,6 @@
   cursor: pointer;
 }
 
-.modalBody{
-   padding: 5%; 
-}
-
-.inputGroup {
-  display: grid;
-  width: 85%;
-  padding: 1%;
-  grid-template-columns: 1fr 6fr;
-}
-
-.modalFooter {
-  display: flex;
-  justify-content: flex-end;
-  gap: 2%;
+.modalBody {
+  padding: 5%;
 }
