--- a/src/view/home/home.module.css
+++ b/src/view/home/home.module.css
@@ -1,7 +1,8 @@
-.homeCalendar {
-  width: calc(100vw - 250px);
-  height: 600px;
-  .app:has(.barra.expandida) & {
-    width: calc(100vw - 50px);
-  }
+.home {
+  margin-left: 100px;
+  padding: 20px;
+  width: 90vw;
+  height: 100vh;
+  display: flex;
+  overflow: hidden;
 }
