--- a/src/view/profile/profile.module.css
+++ b/src/view/profile/profile.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 10px;
   width: 100%;
   height: 100vh;
 }
@@ -36,12 +37,14 @@
   object-fit: cover;
   margin-left: 42px;
 }
-
 .inputGroup {
   position: relative;
-  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
 
   input {
+    color: var(--text-950);
     width: 300px;
     height: 32px;
     font-size: 16px;
@@ -71,13 +74,27 @@
 
   input:focus + span,
   input:valid + span {
-    transform: translate(0, -32px);
+    transform: translate(0, -20px);
     font-size: 16px;
     opacity: 1;
-    
   }
 
   input:focus {
     background-size: 100% 3px, 100% 3px, 100%;
   }
+}
+
+input:disabled {
+  color: var(--text-950);
+  cursor: default;
+}
+
+input:disabled::placeholder {
+  color: var(--text-950);
+}
+
+input:disabled + span {
+  transform: translate(0, -20px);
+  font-size: 16px;
+  opacity: 1;
 }
