--- a/src/view/home/home.module.css
+++ b/src/view/home/home.module.css
@@ -6,3 +6,13 @@
   display: flex;
   overflow: hidden;
 }
+.homebtn {
+  color: var(--text-50);
+  background-color: var(--primary-600);
+  margin: 10px;
+  transition: all 0.5s ease;
+}
+.homebtn:hover {
+  background-color: var(--primary-500);
+  box-shadow: 0 0 10px var(--primary-700);
+}
