--- a/src/view/profile/profile.module.css
+++ b/src/view/profile/profile.module.css
@@ -1,13 +1,3 @@
-.profileContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  width: 100%;
-  height: 100%;
-}
-
 .profile {
   display: flex;
   align-items: center;
@@ -16,6 +6,26 @@
   width: 100%;
   max-width: 900px;
 }
+
+
+ .profile .contanierProfile{
+  border: 3px solid red;
+  border-radius: 5%;
+  background-color: white;
+  height: 100%;
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.profile .profileContent{
+  border: 3px solid red;
+  background-color: white;
+  gap: 3px;
+  height: 90%;
+}
+
 
 .iconProfile {
   width: 300px;
