--- a/src/view/profile/profile.module.css
+++ b/src/view/profile/profile.module.css
@@ -10,7 +10,6 @@
 
 /* ---------------------> logo de perfil */
 .profile .contanierProfile {
-  border: 3px solid red;
   border-radius: 5%;
   background-color: white;
   width: auto;
@@ -56,7 +55,6 @@
 
 /* ----------------------> contenido de los datos */
 .profile .profileContent {
-  border: 3px solid red;
   border-radius: 5%;
   display: flex;
   flex-direction: column;
@@ -137,4 +135,14 @@ input:disabled + span {
   transform: translate(0, -20px);
   font-size: 16px;
   opacity: 1;
+}
+
+.profile .profileContent button {
+  margin: 8px;
+  font-size: 1rem;
+  height: 2rem;
+  width: auto;
+  background-color: var(--primary-800);
+  border: none;
+  border-radius: 10%;
 }
